# ZoreEngine

./: .gitignore  CMakeLists.txt  README.md  Test.cpp  Test.hpp  todo.txt
assets/shaders/: DebugLines.glsl  Sky.glsl  Text.glsl  VoxelBlocks.glsl  VoxelFluids.glsl  VoxelSprites.glsl  VoxelTerrain.glsl  postprocess.glsl  shader.glsl
cmake/: glfw.cmake  glm.cmake  tracy.cmake
config/: config.h.in  path_config.h.in
examples/01_sandbox application/: main.cpp  main.hpp
examples/01_sandbox application/assets/: example_pack.zpak
examples/01_sandbox application/config/: imgui.cfg
shaders/: shader.fs  shader.vs
spirv_compiler/: main.cpp
src/: main.cpp
src/OpenGL/: glad.c
src/components/: Camera.cpp  Camera.hpp
src/core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Event.cpp  Event.hpp  Window.cpp  Window.hpp  main.cpp  main.hpp
src/debug/: Console.cpp  Debug.hpp  Exception.cpp  Logger.cpp  Logger.hpp
src/devices/: KeyCodes.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  MouseCodes.hpp  Window.cpp  Window.hpp
src/game/: Player.cpp  Player.hpp  World.cpp  World.hpp
src/generation/: Biome.cpp  Biome.hpp  Blueprint.cpp  Blueprint.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp
src/graphics/: Buffer.cpp  Buffer.hpp  Context.hpp  ForwardDeclare.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Mesh.cpp  Mesh.hpp  RenderAPI.cpp  RenderAPI.hpp  RenderEngine.cpp  RenderEngine.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexLayout.cpp  VertexLayout.hpp
src/graphics/opengl/: GLBuffer.cpp  GLBuffer.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLMesh.cpp  GLMesh.hpp  GLRenderEngine.cpp  GLRenderEngine.hpp  GLSampler.cpp  GLSampler.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GLVertexLayout.cpp  GLVertexLayout.hpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRenderAPI.cpp  OpenGLRenderAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp
src/math/: Bezier.cpp  Bezier.hpp  CellNoise.cpp  CellNoise.hpp  CoherentNoise.cpp  CoherentNoise.hpp  MathUtils.cpp  MathUtils.hpp  SDF.cpp  Spline.cpp  Spline.hpp  Vector.hpp  WhiteNoise.hpp  simd.hpp
src/platform/win32/: win32_Console.cpp  win32_Core.hpp  win32_Exception.cpp  win32_Exception.hpp  win32_Main.cpp
src/ui/: Canvas.cpp  Canvas.hpp  Text.cpp  Text.hpp  UICanvas.cpp  UIManager.cpp  UIManager.hpp
src/utils/: ConfigManager.cpp  ConfigManager.hpp  DataTypes.hpp  DialogBox.hpp  FileManager.cpp  FileManager.hpp  Logger.cpp  Logger.hpp  Memory.hpp  StringUtils.cpp  StringUtils.hpp  Timer.cpp  Timer.hpp  custom_map.hpp
src/voxel/: Block.hpp  Blueprint.cpp  Blueprint.hpp  Chunk.cpp  Chunk.hpp  ChunkConstants.hpp  ChunkManager.cpp  ChunkManager.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  World.cpp  World.hpp
src/window/: InputCodes.hpp  Window.cpp  Window.hpp
src/zore/: Debug.hpp  Devices.hpp  Events.hpp  Graphics.hpp  Platform.hpp  debug.hpp  devices.hpp  events.hpp  graphics.hpp  platform.hpp  ui.hpp
src/zore/audio/: AudioEngine.cpp  AudioEngine.hpp  Device.cpp  Device.hpp  Group.cpp  Group.hpp  Manager.cpp  Manager.hpp  Source.cpp  Source.hpp  audio_device.cpp  audio_group.cpp  audio_manager.cpp  audio_manager.hpp  audio_source.cpp  audio_source.hpp  device.cpp  group.cpp  source.cpp
src/zore/core/: ActionMap.cpp  ActionMap.hpp  Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Event.cpp  Event.hpp  FileManager.cpp  FileManager.hpp  action_map.cpp  action_map.hpp  application.cpp  application.hpp  camera.cpp  camera.hpp  command.cpp  command.hpp  config_manager.cpp  config_manager.hpp  config_manager.inl  file_manager.cpp  file_manager.hpp
src/zore/debug/: Console.cpp  Console.hpp  Debug.hpp  Exception.cpp  Exception.hpp  Logger.cpp  Logger.hpp  exception.cpp  logger.hpp  profiler.hpp
src/zore/devices/: Clipboard.cpp  Clipboard.hpp  KeyCodes.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  MouseCodes.hpp  Window.cpp  Window.hpp  clipboard.cpp  clipboard.hpp  key_codes.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  mouse_codes.hpp  window.cpp  window.hpp
src/zore/events/: Event.hpp  Handler.hpp  KeyboardEvents.hpp  Manager.cpp  Manager.hpp  MouseEvents.hpp  WindowEvents.hpp  button_events.hpp  event.hpp  event_handler.hpp  event_handler.inl  event_manager.cpp  event_manager.hpp  keyboard_events.hpp  manager.cpp  mouse_events.hpp  window_events.hpp
src/zore/graphics/: Buffer.cpp  Buffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  RenderEngine.cpp  RenderEngine.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexLayout.cpp  VertexLayout.hpp  buffer.hpp  compute_shader.cpp  compute_shader.hpp  frame_buffer.cpp  frame_buffer.hpp  graphics_core.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  graphics_shader.hpp  memory_barrier.cpp  memory_barrier.hpp  render_engine.cpp  render_engine.hpp  resource.cpp  resource.hpp  shader.cpp  shader.hpp  texture.hpp  vertex_layout.cpp  vertex_layout.hpp
src/zore/intrinsics/: BitOps.hpp  Intrinsics.hpp
src/zore/io/: asset_pack.cpp  asset_pack.hpp  file_manager.cpp
src/zore/math/: Bezier.cpp  CellNoise.cpp  MathUtils.hpp  SDF.cpp  SDF.hpp  Spline.cpp  Spline.hpp  Vector.hpp  WhiteNoise.hpp  bezier.cpp  bezier.hpp  cell_noise.cpp  cell_noise.hpp  math.hpp  noise.hpp  sdf.cpp  simd.hpp  spline.cpp  vector.hpp  white_noise.hpp
src/zore/networking/: Address.cpp  Address.hpp  Core.hpp  Manager.cpp  Packet.cpp  Packet.hpp  Request.cpp  Request.hpp  Server.hpp  Socket.cpp  Socket.hpp  Types.hpp  Utils.hpp  address.cpp  address.hpp  networking_core.hpp  networking_manager.cpp  networking_manager.hpp  networking_types.hpp  networking_utils.hpp  packet.cpp  packet.hpp  socket.cpp  socket.hpp
src/zore/physics/: AABB.hpp  aabb.hpp
src/zore/platform/: Platform.hpp  Processor.cpp  Processor.hpp  processor.cpp  processor.hpp
src/zore/structures/: CirclularBuffer.hpp  ObjectPool.hpp  ThreadPool.cpp  ThreadPool.hpp  arena.hpp  circular_queue.hpp  object_pool.hpp  static_for.hpp  string_unordered_map.hpp  thread_pool.cpp  thread_pool.hpp
(+197 files in other folders)
